# trace-weaver

./: .gitignore  やりたいこと.md
tool/: README.md  _test_run.py  pyproject.toml
tool/brt/: __init__.py
tool/brt/ai/: draft.py  prompts.py  refine.py
tool/brt/core/: artifacts.py  reporting.py  selector.py
tool/brt/dsl/: parser.py
tool/brt/importer/: __init__.py  mapper.py  py_ast_parser.py
tool/brt/mcp/: __init__.py  __main__.py  config.py  locator_builder.py  recorder.py  selector_mapper.py  server.py  session.py  snapshot.py  tools_basic.py  tools_highlevel.py
tool/brt/recorder/: injected.js  recorder.py  script_writer.py
tool/brt/steps/: builtin.py  datepicker.py  registry.py
tool/brt/templates/: __init__.py  report.html.j2
tool/examples/flows/: login_flow.yaml  overlay_flow.yaml  wijmo_grid_flow.yaml
tool/flows/: recording.yaml  wijmo_grid.yaml  wiki_nohighlight.py  wiki_nohighlight.yaml  wiki_search.py  wiki_search.yaml
tool/src/: cli.py
tool/src/ai/: __init__.py  explain.py
tool/src/core/: __init__.py  runner.py  waits.py
tool/src/dsl/: __init__.py  linter.py  schema.py  variables.py
tool/src/importer/: heuristics.py  mapper.py  py_ast_parser.py
tool/src/recorder/: __init__.py  script_writer.py
tool/src/steps/: __init__.py  builtin.py  overlay.py  upload.py  wijmo_combo.py  wijmo_grid.py
tool/tests/: conftest.py
tool/tests/test_ai/: __init__.py  test_draft.py  test_refine.py
tool/tests/test_cli/: __init__.py  test_cli.py
tool/tests/test_core/: __init__.py  test_artifacts.py  test_reporting.py  test_runner.py  test_selector.py  (+1 more)
(+31 files in other folders)
